# metrics

./: README.md  flake.nix  package.yaml  values.yaml
.github/workflows/: docker.yaml  publish.yaml
backend/: Cargo.toml  Dockerfile
backend/src/: db.rs  main.rs  routes.rs
collector/: Cargo.toml  Dockerfile
collector/src/: executor.rs  main.rs
dashboard/: Dockerfile  components.json  nginx.conf  package-lock.json  package.json
dashboard/src/: App.vue
dashboard/src/components/: ClusterOverview.vue  NodeCard.vue
dashboard/src/components/ui/chart/: ChartContainer.vue
dashboard/src/composables/: useMetrics.js
templates/: metrics.yaml
